--- a/wishlist/manifest/wishlist-app-deployment.yaml
+++ b/wishlist/manifest/wishlist-app-deployment.yaml
@@ -14,11 +14,11 @@ spec:
     spec:
       containers:
         - name: wishlist-app
-#          image: dashbah/wishlist-app:latest
-          image: wishlisthse-wishlist-app
+          image: dashbah/withlist-app-local-macos:latest
+#          image: wishlisthse-wishlist-app
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8181
+            - containerPort: 8180
           env:
             - name: SERVER_PORT
               value: "8181"
