--- a/wishlist/manifest/wishlist-app-ingress.yaml
+++ b/wishlist/manifest/wishlist-app-ingress.yaml
@@ -2,11 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wishlist-app-ingress
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: whishlist-dashbah
+    - host: wishlist-app.com
       http:
         paths:
           - path: /
@@ -15,4 +16,4 @@ spec:
               service:
                 name: wishlist-app-service
                 port:
-                  number: 8181
+                  number: 8080
