--- a/wishlist/manifest/wishlist-app-ingress.yaml
+++ b/wishlist/manifest/wishlist-app-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: wishlist-app.com
+    - host: wishlist-dashbah.com
       http:
         paths:
           - path: /
