--- a/lexiscan/manifest/db-secret.yaml
+++ b/lexiscan/manifest/db-secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: db-secret
+  name: lexiscan-db-secret
 type: Opaque
 stringData:
   db-user: "admin"
   db-password: "123qwe"
-  db-name: "wishlist_db"
-  datasource-url: "jdbc:postgresql://wishlist-db-service/wishlist_db"
+  db-name: "lexiscan_db"
+  datasource-url: "jdbc:postgresql://lexiscan-db-service/lexiscan_db"
