--- a/lexiscan/manifest/wishlist-app-ingress.yaml
+++ b/lexiscan/manifest/wishlist-app-ingress.yaml
@@ -1,19 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: wishlist-app-ingress
+  name: lexiscan-app-ingress
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: wishlist-dashbah.com
+    - host: lexiscan-dashbah.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: wishlist-app-service
+                name: lexiscan-app-service
                 port:
                   number: 8080
