--- a/lexiscan/manifest/wishlist-app-service.yaml
+++ b/lexiscan/manifest/wishlist-app-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wishlist-app-service
+  name: lexiscan-app-service
 spec:
   selector:
-    app: wishlist-app
-  type: LoadBalancer #works only with this type. why?...
+    app: lexiscan-app
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8080
