--- a/lexiscan/manifest/wishlist-db-service.yaml
+++ b/lexiscan/manifest/wishlist-db-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wishlist-db-service
+  name: lexiscan-db-service
 spec:
   selector:
-    app: wishlist-db
+    app: lexiscan-db
   ports:
     - protocol: TCP
       port: 5432
