--- a/lexiscan/manifest/ml-model-configmap.yaml
+++ b/lexiscan/manifest/ml-model-configmap.yaml
@@ -1,43 +1,30 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: lexiscan-app-configmap
+  name: ml-model-configmap
 data:
   application.properties: |
     spring:
-      datasource:
-        url: jdbc:postgresql://localhost:5432/lexiscan_cloud
-        username: postgres
-        password: postgres
-      jpa:
-        hibernate:
-          ddl-auto: none
-        show-sql: true
       mvc:
         pathmatch:
           matching-strategy: ant_path_matcher
-      liquibase:
-        change-log: classpath:database/changelog/InitialMigration.xml
-        enabled: true
-        drop-first: false
-        default-schema: public
       thymeleaf:
         cache: false
       application:
-        name: lexiscan-auth
+        name: lexiscan-ml
       servlet:
         multipart:
           enabled: true
           max-file-size: 10MB
           max-request-size: 10MB
     
-    #метрики доступны здесь http://localhost:port/actuator/prometheus
-    #source: https://habr.com/ru/articles/548700/
+    # метрики доступны здесь http://localhost:8181/actuator/prometheus
+    # source: https://habr.com/ru/articles/548700/
     management:
       endpoints:
         web:
           exposure:
-            #add info, metrics
+            #        add info, metrics
             include: health,prometheus
       metrics:
         distribution:
@@ -48,15 +35,7 @@ data:
           export:
             enabled: true
     
-    model:
-      url: "http://127.0.0.1:8080/m-model/count"
-    
-    storage:
-      url: jdbc:postgresql://localhost:5432/lexiscan_dev
-      username: admin
-      password: 123qwe
-    
     server:
-      port: 8282
+      port: 8086
       #  in bytes - for image uploading
       max-http-request-header-size: 1073741824
