--- a/lexiscan/manifest/lexiscan-app-deployment.yaml
+++ b/lexiscan/manifest/lexiscan-app-deployment.yaml
@@ -29,4 +29,4 @@ spec:
           emptyDir: {}
         - name: config-volume
           configMap:
-            name: app-configmap
+            name: lexiscan-app-configmap
