--- a/lexiscan/manifest/lexiscan-app-deployment.yaml
+++ b/lexiscan/manifest/lexiscan-app-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
                 secretKeyRef:
-                  name: db-secret
+                  name: lexiscan-db-secret
                   key: datasource-url
           volumeMounts:
             - mountPath: /app/build/libs
