--- a/lexiscan/manifest/prometheus-ingress.yaml
+++ b/lexiscan/manifest/prometheus-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: grafana.lexiscan.com
+    - host: grafana.com
       http:
         paths:
           - path: /
@@ -17,7 +17,7 @@ spec:
                 name: prometheus-grafana
                 port:
                   number: 80  # Порт сервиса Grafana
-    - host: prometheus.lexiscan.com
+    - host: prometheus.com
       http:
         paths:
           - path: /
