--- a/lexiscan/manifest/db-secret.yaml
+++ b/lexiscan/manifest/db-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: lexiscan-db-secret
+  name: db-secret
 type: Opaque
 stringData:
   db-user: "admin"
