changed wishlist-app distrib

--- a/wishlist/manifest/wishlist-app-deployment.yaml
+++ b/wishlist/manifest/wishlist-app-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: wishlist-app
-          image: dashbah/wishlist:2.0.6
+          image: dashbah/wishlist-app:latest
           env:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
